move reused css here & fix minor navbar layout issue

--- a/global.css
+++ b/global.css
@@ -594,12 +594,20 @@ video {
   flex-direction: column;
 }
 
+.content-between{
+  align-content: space-between;
+}
+
 .items-center{
   align-items: center;
 }
 
 .justify-center{
   justify-content: center;
+}
+
+.justify-between{
+  justify-content: space-between;
 }
 
 .p-4{
@@ -844,6 +852,8 @@ nav {
   gap: 2rem;
 }
 
+/* content stuff */
+
 .content {
   display: flex;
   flex-direction: column;
@@ -852,6 +862,26 @@ nav {
   width: clamp(80%, 70% + 10vw, 100%);
   margin: 1.2rem auto;
   margin-top: 6rem;
+}
+
+.section {
+  margin: 0.5rem auto;
+}
+
+.section-title {
+  margin-bottom: 0.5rem;
+}
+
+.section-subtitle {
+  margin-top: 0.5rem;
+}
+
+.section-body {
+  margin-bottom: 0.5rem;
+}
+
+.list-item {
+  margin-bottom: 0.5rem;
 }
 
 .footer-section {
@@ -880,7 +910,7 @@ nav {
   margin-left: clamp(0.5rem, 0.5rem + 0.5vw, 1rem);
 }
 
-@media (max-width: 50rem) {
+@media (max-width: 52rem) {
   nav {
     display: flex;
     justify-content: space-around;
